Final java 20 notes